Ensure that fields in EnlargedContactCard are not clipping

--- a/src/main/resources/view/css/DarkTheme.css
+++ b/src/main/resources/view/css/DarkTheme.css
@@ -103,8 +103,6 @@
     -fx-text-fill: #FFFFFF;
     -fx-wrap-text: true;
     -fx-min-width: 250;
-    -fx-max-width: 250;
-    -fx-pref-width: 250;
 }
 
 /*
